--- a/RH2/index_en.html
+++ b/RH2/index_en.html
@@ -126,7 +126,7 @@
     <section class="company_info purpose f_color_w">
         <div class="ContentsBox">
             <h2 class="main_title">Company Vision</h2>
-            <p class="p_info">Since its establishment, RichHealth has been adhering to the corporate culture of innovation breakthrough, integrity and collaboration, and sincerely faces and fulfills customer’s needs. RichHealth will continue to uphold the company core values of “Innovation, Integrity and Collaboration” and international vision to develop global market and sustain the business with long-term planning and strategy</p>
+            <p class="p_info p_en">Since its establishment, RichHealth has been adhering to the corporate culture of innovation breakthrough, integrity and collaboration, and sincerely faces and fulfills customer’s needs. RichHealth will continue to uphold the company core values of “Innovation, Integrity and Collaboration” and international vision to develop global market and sustain the business with long-term planning and strategy</p>
             <ul class="vision clearfix">
                 <li data-scroll-reveal="enter top and move 50px over 1s">
                     <h4 class="icon_01">Quality Philosophy</h4>
