--- a/RH2/news_en.html
+++ b/RH2/news_en.html
@@ -100,7 +100,7 @@
                 <li class="clearfix">
                     <p class="day">2018-7</p>
                     <div class="new_info">
-                        <p> In 2017 and 2018, RichHealth's innovative CGMS product technology was consecutively awarded by the “Industrial Enterprise Patent Search and Value-added Service Plan of the Industrial Bureau of the Ministry of Economic Affairs of the Republic of China”. This innovative technology has received high praise from the judges and industry.</p>
+                        <p class="p_en"> In 2017 and 2018, RichHealth's innovative CGMS product technology was consecutively awarded by the “Industrial Enterprise Patent Search and Value-added Service Plan of the Industrial Bureau of the Ministry of Economic Affairs of the Republic of China”. This innovative technology has received high praise from the judges and industry.</p>
                         <div class="photo">
                             <img src="images/news_photo.png" width="100%">
                         </div>
@@ -116,19 +116,19 @@
                 <li class="clearfix">
                     <p class="day">2018-11</p>
                     <div class="new_info">
-                        <p><a href="https://www.ontrackdiabetes.com/live-well/diabetes-management/cgm-news-medicare-approves-link-users-smartphones" target="_blank">CGM News: Medicare Approves Link to Users' Smartphones</a></p>
+                        <p class="p_en"><a href="https://www.ontrackdiabetes.com/live-well/diabetes-management/cgm-news-medicare-approves-link-users-smartphones" target="_blank">CGM News: Medicare Approves Link to Users' Smartphones</a></p>
                     </div>
                 </li>
                 <li class="clearfix">
                     <p class="day">2018-11</p>
                     <div class="new_info">
-                        <p><a href="https://www.healthline.com/diabetesmine/news-medicare-coverage-cgm-smartphone-app-use" target="_blank">NEWS: Medicare to Cover CGM with Connected Smartphone Use</a></p>
+                        <p class="p_en"><a href="https://www.healthline.com/diabetesmine/news-medicare-coverage-cgm-smartphone-app-use" target="_blank">NEWS: Medicare to Cover CGM with Connected Smartphone Use</a></p>
                     </div>
                 </li>
                 <li class="clearfix">
                     <p class="day">2018-11</p>
                     <div class="new_info">
-                        <p><a href="https://www.fda.gov/NewsEvents/Newsroom/PressAnnouncements/ucm611475.htm" target="_blank">FDA approves automated insulin delivery and monitoring system for use in younger pediatric patients</a></p>
+                        <p class="p_en"><a href="https://www.fda.gov/NewsEvents/Newsroom/PressAnnouncements/ucm611475.htm" target="_blank">FDA approves automated insulin delivery and monitoring system for use in younger pediatric patients</a></p>
                     </div>
                 </li>
             </ul>
