--- a/RH2/product_en.html
+++ b/RH2/product_en.html
@@ -95,20 +95,20 @@
     <section class="company_info "><!-- w_triangle -->
         <div class="ContentsBox">
             <h2 class="main_title">Technology Highlights</h2>
-            <p class="p_info"><span class="blue_line">RichHealth integrates diverse fields of biomedical science, high-end electronic component design, software design, medical regulation professionals and global marketing experts and dedicates in developing high-end medical device products. Starting from the continuous glucose measurement technology, RichHealth’s ultimate goal has been establishing a comprehensive platform technology for physiological measurements.</span><br></p>
+            <p class="p_info p_en"><span class="blue_line">RichHealth integrates diverse fields of biomedical science, high-end electronic component design, software design, medical regulation professionals and global marketing experts and dedicates in developing high-end medical device products. Starting from the continuous glucose measurement technology, RichHealth’s ultimate goal has been establishing a comprehensive platform technology for physiological measurements.</span><br></p>
             <div class="imgBox" data-scroll-reveal="enter top"><img src="images/pic_product_technology_en.png" alt="Technical characteristics" width="100%"></div>
         </div>
     </section>
     <section class="company_info service f_color_w align_flex">
         <div class="ContentsBox bg-k" data-scroll-reveal="enter top">
             <h2 class="main_title">Customer Service</h2>
-            <p class="p20">In addition to product development, certification, sales and marketing under our own brand, RichHealth also provides professional ODM/OEM services. We provide total solutions for a comprehensive medical electronic system for our clients according to their market demands.</p>
+            <p class="p20 p_en">In addition to product development, certification, sales and marketing under our own brand, RichHealth also provides professional ODM/OEM services. We provide total solutions for a comprehensive medical electronic system for our clients according to their market demands.</p>
         </div>
     </section>
     <section class="company_info patent f_color_w align_flex">
         <div class="ContentsBox bg-k" data-scroll-reveal="enter left">
             <h2 class="main_title">Patent Portfolio</h2>
-            <p class="p20">Our continuous physiological information (such as blood glucose) monitoring technologies have obtained multiple patents from various countries or areas in the world, such as United States, Europe, Taiwan, and China.</p>
+            <p class="p20 p_en">Our continuous physiological information (such as blood glucose) monitoring technologies have obtained multiple patents from various countries or areas in the world, such as United States, Europe, Taiwan, and China.</p>
         </div>
     </section>
     <section class="company_info product_list">
@@ -118,7 +118,7 @@
                     <div class="photo p_01"></div>
                     <div class="info">
                         <h3>Wireless Temperature Measurement System</h3>
-                        <p><span>The wireless temperature sticker instantly detects the body temperature and transmits the signal to the phone or receiver. </span><br>
+                        <p class="p_en"><span>The wireless temperature sticker instantly detects the body temperature and transmits the signal to the phone or receiver. </span><br>
                         There are child sticker and woman sticker with different designs. They are designed for the comfort of users. The patch is made of biocompatible silicone material, which is skin friendly. It helps monitor the body temperature of infants and children to provide warning reminders to ensure children's health. The woman sticker helps monitor female physical signs, follow women's menstrual period, ovulation period to prepare woman for pregnancy.</p>
                     </div>
                 </li>
@@ -126,7 +126,7 @@
                     <div class="photo p_02"></div>
                     <div class="info">
                         <h3>Glucose Microneedle Sensor</h3>
-                        <p><span>We have unique micro-invasive glucose monitoring technology which can touch the skin gently, continuously and effectively measure the changes of glucose and physiological metabolites concentration in the body, which can effectively reduce the pain and pressure caused by blood taking.</span><br>
+                        <p class="p_en"><span>We have unique micro-invasive glucose monitoring technology which can touch the skin gently, continuously and effectively measure the changes of glucose and physiological metabolites concentration in the body, which can effectively reduce the pain and pressure caused by blood taking.</span><br>
                             The product adapts painless microneedle array coating technology to effectively enhance the signal. It has anti-interference to glucose sensing to protect and extend the stability and durability of the electrode. The unique glucose correction technology and algorithm developed by our professional Electronic Engineering R & D personnel will eliminate unnecessary data misinterpretation. It greatly increases the signal identification correctness, and leads the industry's technology.  RichHealth’s products also integrate Bluetooth technology to connect with mobile phone , and will proactively upload  warning and measurement data to cloud database.<br>
                         In view of recent popularity of smart mobile devices and wearable devices in, our products will take advantage of integrating lifestyle and fashion trend to provide a convenient measurement and instant feedback. At present, international major manufacturers have also invested in the development of related technologies, which is also the development trend of future products.</p>
                     </div>
