--- a/RH2/index_en.html
+++ b/RH2/index_en.html
@@ -116,7 +116,7 @@
     <section class="company_info "><!-- w_triangle -->
         <div class="ContentsBox">
             <h2 class="main_title">Company Profile</h2>
-            <p class="p_info"><span class="blue_line">Founded in April, 2016, with passion and vision, RichHealth integrates biomedicine, high-end electronic component design, global marketing experts and dedicates in developing high-end medical device products.</span><Br></p>
+            <p class="p_info p_en"><span class="blue_line">Founded in April, 2016, with passion and vision, RichHealth integrates biomedicine, high-end electronic component design, global marketing experts and dedicates in developing high-end medical device products.</span><Br></p>
                 <p class="h24">RichHealth merged Micro Nipple Technology in the 3rd quarter of 2016. Integrating its micro-needle technology, RichHealth keeps developing the method of mass production and disposable minimally invasive continuous glucose monitoring (CGM) products and specializes in a total solution for disposable medical electronic system.<br>
                 <br>
                 The first generation of wireless disposable temperature patch has been launched into the market. With interactive mobile APP, RichHealth has built an all-round uninterrupted proactive medical warning networking system.<br>
