--- a/C/contact.html
+++ b/C/contact.html
@@ -68,7 +68,24 @@
             E-Mail&nbsp;&nbsp;<a href="mailto:kangchen5568@gmail.com">kangchen5568@gmail.com</a><br />
             地&nbsp;&nbsp;&nbsp;&nbsp;址         243新北市泰山區全興路226號1樓<br/>
             <br/>
-            加工廠商 <a href="http://www.comfortchic.com.tw" target="_new">連程實業</a>
+            加工廠商<br>
+            <b>北區</b><br />
+            <a href="http://www.comfortchic.com.tw" target="_new">連程實業</a> (02)2900-8756<br />
+            田益實業有限公司 (03)928-2316<br />
+            旺昌有限公司 (02)2602-1090<br />
+            <a href="http://tongguh.com.tw" target="_new">東固企業有限公司</a> (02)2909-0773<br />
+            <a href="www.oecl.com.tw" target="_new">東拓專業石英石加工</a> (03)324-0667<br />
+            峻晟實業股份有限公司 (02)2608-0192-3<br />
+            原創石材有限公司 (02)2608-9061-2<br />
+            特葉有限公司 (03)359-7171<br />
+            <br />
+            <b>中區</b><br />
+            峻砷實業有限公司 (04)887-6956<br />
+            龍樺石英加工廠 (049)256-3176<br />
+            <br />
+            <b>南區</b><br />
+            峻益興業有限公司 (06)205-3386<br />
+            基佳建材有限公司 (07)614-3243<br />
             </p>
           </div>
           </div>
