--- a/C/tech.html
+++ b/C/tech.html
@@ -67,6 +67,7 @@
       <h2>產品規格</h2>
       <h3>長度 X 寬度</h3>
       <p>3050mm X 1400mm</p>
+      <p>3300mm X 1630mm (部分商品)</p>
       <h3>厚度</h3><p>12mm、20mm </p>
       <h3>重量 </h3> 
       <p>  12mm: 150kg</p> 
