--- a/C/index.html
+++ b/C/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<link rel="shortcut icon" href="images/favicon.ico" type="images/favicon.ico"> 
+<link rel="shortcut icon" href="images/favicon.ico" type="images/favicon.ico">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link href="css/layout.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="js/jquery-1.3.2.js"></script>
@@ -13,26 +13,28 @@
 
 <body id="index">
 <div id="wrapper">
-	
+
     <!--Slides-->
 <div id="supersize">
-	<a><img src="images/banner/banner-1.jpg" title=""/></a>
-     <a><img src="images/banner/banner-2.jpg" title=""/></a>
-    <a><img src="images/banner/banner-3.jpg" title=""/></a>
-    <a><img src="images/banner/banner-4.jpg" title=""/></a>
-    <a><img src="images/banner/banner-5.jpg" title=""/></a>
+  <a><img src="images/banner/banner-1.jpg"/></a>
+  <a><img src="images/banner/banner-2.jpg"/></a>
+  <a><img src="images/banner/banner-3.jpg"/></a>
+  <a><img src="images/banner/banner-4.jpg"/></a>
+  <a><img src="images/banner/banner-5.jpg"/></a>
+  <a><img src="images/banner/banner-6.jpg"/></a>
 </div>
-    
-    <div class="nav">
-    	<h1><a href="index.html"></a></h1>
-        <ul>
-    	  <li class="navAbout"><a href="about.html"></a></li>
-          <li class="navProduct"><a href="product.html"></a></li>
-          <li class="navApplication"><a href="application.aspx"></a></li>
-          <li class="navTech"><a href="tech.html"></a></li>
-          <li class="navContact"><a href="contact.aspx"></a></li>
-          <li class="navScroll"></li>
-    	</ul>
+
+  <div class="nav">
+    <h1><a href="index.html"></a></h1>
+    <ul>
+      <li class="navAbout"><a href="about.html"></a></li>
+      <li class="navProduct"><a href="product.html"></a></li>
+      <li class="navApplication"><a href="application1.aspx"></a>
+      </li>
+        <li class="navTech"><a href="tech.html"></a></li>
+        <li class="navContact"><a href="contact.aspx"></a></li>
+        <li class="navScroll"></li>
+    </ul>
 	</div>
 
 	<div class="footer"><p class="copyright"></p></div>
