--- a/C/login.html
+++ b/C/login.html
@@ -23,7 +23,7 @@
 </div>
 
 <div class="footer">
-<p>Copyright © 2013 CAMPAC</p></div>
+<p>©COMPAC.ALL Rights Reserved</p></div>
 </body>
 </html>
 
