--- a/C/product.html
+++ b/C/product.html
@@ -15,7 +15,7 @@
 <script src="js/antiscroll.js"></script>
 <!---->
 <link href="css/productpop.css" rel="stylesheet" type="text/css" />
- <script src="js/productpop.js"></script> 
+ <script src="js/productpop.js"></script>
 <title>COMPAC</title>
 </head>
 
@@ -23,24 +23,31 @@
 <div id="wrapper">
 
 <!--Slides-->
-<div id="supersize"> 
-    <a><img src="images/bg/bg06.jpg" title=""/></a> 
-    <a><img src="images/bg/bg07.jpg" title=""/></a> 
-    <a><img src="images/bg/bg08.jpg" title=""/></a> 
-    <a><img src="images/bg/bg08-1.jpg" title=""/></a>
-    <a><img src="images/bg/bg08-2.jpg" title=""/></a>
+<div id="supersize">
+    <a><img src="images/bg/bg_13-1.jpg" title=""/></a>
+    <a><img src="images/bg/bg_13-2.jpg" title=""/></a>
+    <a><img src="images/bg/bg_13-3.jpg" title=""/></a>
+    <a><img src="images/bg/bg_13-4.jpg" title=""/></a>
+    <a><img src="images/bg/bg_13-5.jpg" title=""/></a>
 </div>
 
 <div class="nav">
-  <h1><a href="index.html"></a></h1>
-  <ul>
-    <li class="navAbout"><a href="about.html"></a></li>
-    <li class="navProduct"><a href="product.html"></a></li>
-    <li class="navApplication"><a href="application.aspx"></a></li>
-    <li class="navTech"><a href="tech.html"></a></li>
-    <li class="navContact"><a href="contact.aspx"></a></li>
-    <li class="navScroll"></li>
-  </ul>
+  <h1><a href="index.html">COMPAC</a></h1>
+      <ul>
+        <li class="navAbout"><a href="about.html">公司簡介</a></li>
+          <li class="navProduct"><a href="product.html">產品介紹</a></li>
+          <li class="navApplication"><a>產品應用</a>
+            <ul>
+              <li><a href="application1.aspx">居家應用</a></li>
+              <li><a href="application2.aspx">商業空間</a></li>
+              <li><a href="application3.aspx">康沛石專賣店</a></li>
+              <li><a href="application4.aspx">活動紀事</a></li>
+            </ul>
+          </li>
+          <li class="navTech"><a href="tech.html">技術規格</a></li>
+          <li class="navContact"><a href="contact.aspx">聯絡我們</a></li>
+          <li class="navScroll"></li>
+      </ul>
 </div>
 <div class="fix_close"></div>
 <div class="content">
@@ -94,18 +101,18 @@
             </div>
             <div class="product_imgsin">
               <div class="product_img"><a href="#imgA05"><img src="images/product/bio_new_05.png" width="103" height="103"></a></div>
-              <div class="product_txt">2CP012</div>
+              <div class="product_txt">2CP013</div>
             </div>
             <div class="product_imgsin">
               <div class="product_img"><a href="#imgA06"><img src="images/product/bio_new_06.png" width="103" height="103"></a></div>
-              <div class="product_txt">2CP012</div>
+              <div class="product_txt">2CP015</div>
           </div>
 
           </div>
           <!-- lightbox container hidden with CSS -->
-                <a href="#_" class="lightbox" id="imgA01"><img src="images/product/bio_new_01_L_CG951.jpg"></a>
-                <a href="#_" class="lightbox" id="imgA02"><img src="images/product/color1-2.jpg"></a>
-                <a href="#_" class="lightbox" id="imgA03"><img src="images/product/color1-3.jpg"></a>
+                <a href="#_" class="lightbox" id="imgA01"><img src="images/product/product_CN711-2.jpg"></a>
+                <a href="#_" class="lightbox" id="imgA02"><img src="images/product/product_CN712-1.jpg"></a>
+                <a href="#_" class="lightbox" id="imgA03"><img src="images/product/product_CN713-2.jpg"></a>
                 <a href="#_" class="lightbox" id="imgA04"><img src="images/product/bio_new_04_L_2CP012.jpg"></a>
                 <a href="#_" class="lightbox" id="imgA05"><img src="images/product/bio_new_05_L_2CP013.jpg"></a>
                 <a href="#_" class="lightbox" id="imgA06"><img src="images/product/bio_new_06_L_2CP015.jpg"></a>
@@ -126,13 +133,11 @@
     <div class="trend">應用層面廣泛：廚房流理檯面、浴室洗手檯面、地板、牆面或是人群往來密集的地方如：購物中心、機場、政府機構建物…等。</div>
   </div>
 
-
-
   <div class="txt_4" id="product3">
-  <!-- <div class="antiscroll-wrap"> -->
-  <!-- <div class="antiscroll-inner">  -->
+    <!-- <div class="antiscroll-wrap"> -->
+    <!-- <div class="antiscroll-inner">  -->
       <h2>全色彩系列</h2>
-
+      <p style="color:#fff; padding-bottom: 25px; max-width: 330px; text-align: justify;">各色號圖片僅供參考，因受環境光線及電腦色差影響，與實際產品會有些許誤差，確認顏色請以實品為準。</p>
       <h3>大眾色系</h3>
       <div class="color123">
           <div class="color_line">
@@ -239,24 +244,24 @@
           </div>
 
           <!-- 大眾色系 - lightbox -->
-          <a href="#_" class="lightbox" id="img_a_01"><img src="images/product/color4-1.jpg"></a>
+          <a href="#_" class="lightbox" id="img_a_01"><img src="images/product/CP111_Ceniza.jpg"></a>
           <a href="#_" class="lightbox" id="img_a_02"><img src="images/product/color4-2.jpg"></a>
-          <a href="#_" class="lightbox" id="img_a_03"><img src="images/product/product_CP113_L.jpg"></a><!-- 缺大圖 -->
+          <a href="#_" class="lightbox" id="img_a_03"><img src="images/product/CP113_Arena.jpg"></a><!-- 缺大圖 -->
 
-          <a href="#_" class="lightbox" id="img_a_04"><img src="images/product/color1-1.jpg"></a>
-          <a href="#_" class="lightbox" id="img_a_05"><img src="images/product/color1-2.jpg"></a>
-          <a href="#_" class="lightbox" id="img_a_06"><img src="images/product/color1-3.jpg"></a>
+          <a href="#_" class="lightbox" id="img_a_04"><img src="images/product/CP115_Alaska.jpg"></a>
+          <a href="#_" class="lightbox" id="img_a_05"><img src="images/product/CP116_Snow.jpg"></a>
+          <a href="#_" class="lightbox" id="img_a_06"><img src="images/product/CP211_Luna.jpg"></a>
 
           <a href="#_" class="lightbox" id="img_a_07"><img src="images/product/product_CP212_L.jpg"></a>
-          <a href="#_" class="lightbox" id="img_a_08"><img src="images/product/color4-6.jpg"></a>
-          <a href="#_" class="lightbox" id="img_a_09"><img src="images/product/product_CP217_L.jpg"></a>
+          <a href="#_" class="lightbox" id="img_a_08"><img src="images/product/CP215_Nocturno.jpg"></a>
+          <a href="#_" class="lightbox" id="img_a_09"><img src="images/product/CP217_Land.jpg"></a>
 
-          <a href="#_" class="lightbox" id="img_a_10"><img src="images/product/product_CP218_L.jpg"></a>
+          <a href="#_" class="lightbox" id="img_a_10"><img src="images/product/CP218_Cool-Functional.jpg"></a>
           <a href="#_" class="lightbox" id="img_a_11"><img src="images/product/color1-4.jpg"></a>
-          <a href="#_" class="lightbox" id="img_a_12"><img src="images/product/color1-5.jpg"></a>
+          <a href="#_" class="lightbox" id="img_a_12"><img src="images/product/CP313_Lactea.jpg"></a>
 
           <a href="#_" class="lightbox" id="img_a_13"><img src="images/product/color4-5.jpg"></a>
-          <a href="#_" class="lightbox" id="img_a_14"><img src="images/product/color1-6.jpg"></a>
+          <a href="#_" class="lightbox" id="img_a_14"><img src="images/product/CP511_Absolute-Blanc.jpg"></a>
           <a href="#_" class="lightbox" id="img_a_15"><img src="images/product/color2-1.jpg"></a>
 
           <a href="#_" class="lightbox" id="img_a_16"><img src="images/product/color5-3.jpg"></a>
@@ -296,7 +301,7 @@
               </div>
               <div class="product_imgsin">
                 <div class="product_img"><a href="#img_b_06"><img src="images/product/bio_new_04.png" width="103" height="103" /></a></div>
-                <div class="product_txt">Unique Calacatta</div>
+                <div class="product_txt">Unique Venatino</div>
                 <div class="product_txt">2CP012 &nbsp;<span class="product_num">&nbsp;P&nbsp;</span></div>
               </div>
           </div>
@@ -347,7 +352,7 @@
       <div class="color123">
           <div class="color_line">
               <div class="product_imgsin">
-                <div class="product_img"><a href="#img_c_01"><img src="images/product/新圖.png" width="103" height="103" /></a></div> <!-- 缺小圖 -->
+                <div class="product_img"><a href="#img_c_01"><img src="images/product/color1-6.png" width="103" height="103" /></a></div> <!-- 缺小圖 -->
                 <div class="product_txt">Absolute Blanc</div>
                 <div class="product_txt">CG851 &nbsp;<span class="product_num">&nbsp;G&nbsp;</span></div>
               </div>
@@ -357,7 +362,7 @@
                 <div class="product_txt">CG951 &nbsp;<span class="product_num">&nbsp;G&nbsp;</span></div>
               </div>
               <div class="product_imgsin">
-                <div class="product_img"><a href="#img_c_03"><img src="images/product/product_CG952.png" width="103" height="103" /></a></div>
+                <div class="product_img"><!-- <a href="#img_c_03"> --><img src="images/product/product_CG952.png" width="103" height="103" /><!-- </a> --></div>
                 <div class="product_txt">CG952 Perlino</div>
                 <div class="product_txt">CG952 &nbsp;<span class="product_num">&nbsp;G&nbsp;</span></div>
               </div>
@@ -365,9 +370,9 @@
 
           <div class="color_line">
               <div class="product_imgsin">
-                <div class="product_img"><a href="#img_c_04"><img src="images/product/新圖.png" width="103" height="103" /></a></div><!-- 缺小圖 -->
+                <div class="product_img"><a href="#img_c_04"><img src="images/product/product_2CP010.png" width="103" height="103" /></a></div><!-- 缺小圖 -->
                 <div class="product_txt">Unique Calacatta</div>
-                <div class="product_txt">2CG050 &nbsp;<span class="product_num">&nbsp;G&nbsp;</span></div>
+                <div class="product_txt">2CP050 &nbsp;<span class="product_num">&nbsp;G&nbsp;</span></div>
               </div>
               <div class="product_imgsin">
                 <div class="product_img"><a href="#img_c_05"><img src="images/product/color7-1.png" width="103" height="103" /></a></div>
@@ -390,27 +395,35 @@
           </div>
 
           <!-- 特殊表面 - lightbox -->
-          <a href="#_" class="lightbox" id="img_c_01"><img src="images/product/新圖.jpg"></a>
+          <a href="#_" class="lightbox" id="img_c_01"><img src="images/product/product_CG-851.jpg"></a>
           <a href="#_" class="lightbox" id="img_c_02"><img src="images/product/product_CG951_L.jpg"></a>
-          <a href="#_" class="lightbox" id="img_c_03"><img src="images/product/product_CG952_L.jpg"></a><!-- 缺大圖 -->
+         <!--  <a href="#_" class="lightbox" id="img_c_03"><img src="images/product/product_CG952_L.jpg"></a> --><!-- 缺大圖 -->
 
-          <a href="#_" class="lightbox" id="img_c_04"><img src="images/product/新圖.jpg"></a>
-          <a href="#_" class="lightbox" id="img_c_05"><img src="images/product/color7-2.jpg"></a>
-          <a href="#_" class="lightbox" id="img_c_06"><img src="images/product/color7-3.jpg"></a>
+          <a href="#_" class="lightbox" id="img_c_04"><img src="images/product/product_2CP050.jpg"></a>
+          <a href="#_" class="lightbox" id="img_c_05"><img src="images/product/2CG860_WHITE_Zement.jpg"></a>
+          <a href="#_" class="lightbox" id="img_c_06"><img src="images/product/2CG861_ICE_Zement.jpg"></a>
 
           <a href="#_" class="lightbox" id="img_c_07"><img src="images/product/color7-5.jpg"></a>
+
+          <div class="color123">
+            <div class="color_line"> 
+              <div class="product_imgsin1">
+                <p><span class="product_num">&nbsp;P&nbsp;</span><span class="product_txt">：光滑面 Polished&nbsp;&nbsp;</span>
+                <span class="product_num">&nbsp;G&nbsp;</span><span class="product_txt">：霜紋面 Glacé&nbsp;&nbsp;</span>
+                <span class="product_num">&nbsp;O&nbsp;</span><span class="product_txt">：蛋殼面 OVO</span></p>
+              </div>
+            </div>
+          </div>
       </div>
+  </div>
+  <!--txt4 end-->
 
-   </div>
-
-        <!--txt4 end-->
-
-    <div class="txt_5" id="product1">
+  <div class="txt_5" id="product1">
     <p>作為一個發展成熟且不斷創新求變、引領趨勢潮流的跨國品牌，COMPAC以靈敏的時尚嗅覺和不畏挑戰的技術創新，再度推出<b>ICE OF GENESIS</b>及<b>UNIQUE<b>兩款嶄新色系。</p><br/>
 
        <h3>ICE OF GENESIS</h3>
         <img src="images/product/new_01.jpg" width="430" height="120" />
-        <p class="no_t"><b>獨步全球 自然與科技的完美呈現</b></p>
+        <p class="no_t"><b style=" font-size: 18px; color: #d6d6d6;">獨步全球 自然與科技的完美呈現</b></p>
         <p>ICE OF GENESIS是萬物之始，自然和物質的起源。顛覆現有室內裝潢面材的劃時代新品，設計﹑藝術和技術完美結合所創造出的康沛石 冰湖系列-創世紀，是COMPAC最輝煌的系列產品。</p>
         <p>靈感來自北極的大冰湖，COMPAC與國際藝術兼設計大師Arik Levy合作推出的ICE系列，打造出前所未見，具有深度、卻又光滑且堅如磐石的特殊紋理。</p>
         <br/>
@@ -418,43 +431,19 @@
         <h3>Unique Marquina™</h3>
 
         <img src="images/product/new_02.jpg" width="430" height="120" />
-        <p class="no_t"><b>完美的優雅 完美的宣言 完美至關重要</b></p>
+        <p class="no_t"><b style=" font-size: 18px; color: #d6d6d6;">完美的優雅</b></p>
        <p>從岩石的黑暗中走出蜿蜒的白色光潔條紋，賦予這種材料優雅精緻的外觀，充滿力量和真實感。
-      獨特的MarquinaTM意味著純淨、優雅和與眾不同。</p><br/>
+      獨特的Marquina™意味著純淨、優雅和與眾不同。</p><br/>
 
        <h3>Unique Venatino™</h3>
 
        <img src="images/product/new_03.jpg" width="430" height="120" />
-       <p class="no_t"><b>完美的優雅 完美的宣言 完美至關重要</b></p>
+       <p class="no_t"><b style=" font-size: 18px;  color: #d6d6d6;">完美的宣言</b></p>
        <p>脈紋中遍佈著柔和的白與細膩的藍灰，使每件作品都展現著不可思議的優雅和簡潔。
-      獨特的VenatinoTM是野性和優雅、沉穩和活力之間的完美平衡。</p>
+      獨特的Venatino™是野性和優雅、沉穩和活力之間的完美平衡。</p>
       <br/>
         <h3>Unique Argento™</h3>
 
         <img src="images/product/new_04.jpg" width="430" height="120" />
-        <p class="no_t"><b>完美的優雅 完美的宣言 完美至關重要</b></p>
-        <p>天然的精華在優雅中被提升至極致，以醒目的銀色調，濃密地包覆住每道纖細的脈紋，隱隱閃動著嬌柔的微光。
-        獨特的ArgentoTM將其所到之處轉變為非凡的空間，為其共存的其他材料和紋理提供堅實的基礎。</p>
-      </div>
-
-      <!-- 以上是新的code -->
-
-
-    <div class="footer">
-      <p class="copyright"></p>
-    </div>
-  </div>
-  <div id="bg"> <img src="images/product/bg.jpg" alt=""> </div>
-</div>
-
-<!-- pp視窗 -->
-<div id="popup_all">
-      <div class="popup_content">
-   		<a href="#" class="popup_close"></a>
-   		<img src="images/product/color1-1.jpg" width="800" height="600" ID="BIG"/>
-   		</div>
-   		<div class="popup_bg"></div>
- </div>
-
-</body>
-</html>
+        <p class="no_t"><b style=" font-size: 18px; color: #d6d6d6;">完美至關重要</b></p>
+     
