--- a/GOLOOK/index.html
+++ b/GOLOOK/index.html
@@ -7,16 +7,16 @@
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css\index.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css\w3.css">
-    <script type="text/javascript" src="js\menu.js"></script>
+    <link href="css/index.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/w3.css">
+    <script type="text/javascript" src="js/menu.js"></script>
     <script src="//s3-ap-northeast-1.amazonaws.com/justfont-user-script/jf-44658.js"></script>
     <!--slider-->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-    <script src="js\slippry.min.js"></script>
+    <script src="js/slippry.min.js"></script>
     <script src="//use.edgefonts.net/cabin;source-sans-pro:n2,i2,n3,n4,n6,n7,n9.js"></script>
-    <link rel="stylesheet" href="css\demo.css">
-    <link rel="stylesheet" href="css\slippry.css">
+    <link rel="stylesheet" href="css/demo.css">
+    <link rel="stylesheet" href="css/slippry.css">
     <!--captcha-->
     <script src="https://www.google.com/recaptcha/api.js"></script>
     <!--snow-->
@@ -25,7 +25,8 @@
     <!--facebook fance clube-->
     <div id="fb-root"></div>
     <script>
-      (function(d, s, id) {                                                                                                                                                        var js, fjs = d.getElementsByTagName(s)[0];
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
         js = d.createElement(s); js.id = id;
         js.src = "//connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v2.7";
