--- a/GOLOOK/html/welfare.html
+++ b/GOLOOK/html/welfare.html
@@ -152,8 +152,9 @@
       <div class="container">
         <div class="row col-md-12">
           <h3 class="typo">特約優惠商家列表</h3>
-          <p><a class="popup-link" href="#popup">顯示列表</a></p>
-          <p><a href="http://golook.tw/Group/PromoList.aspx?CardID=118" class="my-popup iframe-link">Show iframe popup</a></p>
+          <!-- <p><a class="popup-link" href="#popup">顯示列表</a></p> -->
+          <p class="out_link"><a href="http://golook.tw/Group/PromoList.aspx?CardID=118" class="my-popup iframe-link">顯示列表</a></p>
+          <!-- <iframe class="screen" width="100%" height="100%" src="https://www.google.com.tw/webhp?hl=zh-TW&sa=X&ved=0ahUKEwiij7SLuo3fAhVIUbwKHaq0AcAQPAgH"></iframe> -->
         </div>
       </div>
     </div>
@@ -384,11 +385,8 @@
     </div>
 
     <!-- 優惠店家網頁 -->
-    <!-- <div id="popup" class="white-popup mfp-hide">
-        <iframe  src="http://golook.tw/Group/PromoList.aspx?CardID=118"></iframe>
-    </div> -->
     <div id="popup" class="white-popup mfp-hide">
-        <iframe src="https://www.google.com.tw/webhp?hl=zh-TW&sa=X&ved=0ahUKEwiij7SLuo3fAhVIUbwKHaq0AcAQPAgH"></iframe>
+        <iframe src="http://golook.tw/Group/PromoList.aspx?CardID=118"></iframe>
     </div>
 </body>
 </html>
